feat: add contact form using Formspree

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
         </div>
         <button id="generate-btn">Generate Numbers</button>
     </div>
+
+    <section class="contact-section">
+        <h2>제휴 문의</h2>
+        <form action="https://formspree.io/f/xykdowjz" method="POST" class="contact-form">
+            <label>
+                Your email:
+                <input type="email" name="email" placeholder="email@example.com" required>
+            </label>
+            <label>
+                Your message:
+                <textarea name="message" rows="4" placeholder="문의 내용을 입력해주세요." required></textarea>
+            </label>
+            <button type="submit">Send</button>
+        </form>
+    </section>
+
     <script src="main.js"></script>
 </body>
 </html>
